opam-version: "2.0"
version: "dev"

maintainer: [
  "Ilya Sergey <ilya.sergey@yale-nus.edu.sg>"
  "George Pîrlea <gpirlea@comp.nus.edu.sg>"
]
authors: [
  "George Pîrlea"
  "Ilya Sergey"
]
homepage: "https://github.com/TyGuS/ssl-iris"
bug-reports: "https://github.com/TyGuS/ssl-iris"
dev-repo: "git+https://github.com/TyGuS/ssl-iris.git"
synopsis: "Iris tactics for SSL"
license: "GPL-3.0"
description: ""

build: [ make ]
install: [ make "install" ]
depends: [
  "ocaml"
  "coq" {(>= "8.11.0" & < "8.13~") | (= "dev")}
  "coq-iris" {(= "dev.2021-02-24.0.ffcaed52")}
  "coq-iris-heap-lang" {(= "dev.2021-02-24.0.ffcaed52")}
  "coq-iris-string-ident" {(= "dev")}
  "coq-hammer"
]
tags: [
  "keyword:separation logic"
  "keyword:program synthesis"
  "category:Computer Science/Data Types and Data Structures"
  "logpath:SSL"
]
url {
  src: "git+https://github.com/TyGuS/ssl-iris.git"
}
